@@ -27,7 +27,8 @@ polyroot(z)
   If the coefficient vector \code{z} has zeroes for the highest powers,
   these are discarded.
 
-  The maximum allowed degree is 49 (50 coefficients).
+  As from \R 2.8.0 there is no maximum degree, but numerical stability
+  may be an issue for all but low-degree polynomials.
 }
 \value{
   A complex vector of length \eqn{n - 1}, where \eqn{n} is the position
